--- a/fiori_report_278/webapp/test/flpSandbox.html
+++ b/fiori_report_278/webapp/test/flpSandbox.html
@@ -63,6 +63,7 @@
         data-sap-ui-preload="async"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
+        data-sap-ui-oninit="module:br/com/cliente/gestao/fiorireport278/test/initMockServer"
         data-sap-ui-language="en"
         data-sap-ui-resourceroots='{"br.com.cliente.gestao.fiorireport278": "../"}'
         data-sap-ui-frameOptions="allow">
